# EmbeddedCrypto

./: README.md
FoRTE-AES/: driver.c  driver.h
FoRTE-AES/Debug/: makefile  sources.mk
FoRTE-AES/gladman-AES/: aes.h  aesaux.c  aesaux.h  aescrypt.c  aeskey.c  aesopt.h  aestab.c
aes/: .cproject  .gitignore  CMakeLists.txt  aes.ino  config.h  experiment_time.h  main.c  main_with_systick.c  readme.md  risc_v_main.c  test.h  uart.c  uart.h
aes/.launches/: aes.launch
aes/Debug/: aes.d  aes.map  aes.out  aes_linkInfo.xml  ccsObjs.opt  main.d  makefile  sources.mk  subdir_rules.mk
aes/Debug/tiny_aes/: aes.d  subdir_rules.mk  subdir_vars.mk
aes/apollo/: main.c
aes/gladman/: README.md  aes.h  aesaux.c  aeskey.c  aestst.c  aestst.h  modetest.c
aes/mbedtls/: aes.c
aes/tiny_aes/: README.md  aes.c  aes.h
chacha20/: README.md  chacha20.ino  experiment_time.h  main.c
chacha20/ChaCha20-rfc7539/: README.md
chacha20/chacha20_avr/: README.md  chacha.h  chacha20.c
chacha20/mbedtls/: build_info.h  chacha20.c  common.h  platform_util.c
chacha20_v2/: .cproject  .project  experiment_time.h  main.c  uart.c
chacha20_v2/.launches/: chacha20_v2.launch
chacha20_v2/Debug/: ccsObjs.opt  chacha20_v2.map  chacha20_v2.out  chacha20_v2_linkInfo.xml  main.d  makefile  sources.mk  subdir_rules.mk  uart.d
chacha20_v2/mbedtls/: chacha20.h  mbedtls_config.h
ecc/: README.md  curve.h  ecc.ino  experiment_time.h  main.c
ecc/bsd/: .platform-specific.inc.icloud  ecdh.c  (+4 more)
mac/: config.h
rsa/: main.c  rsa.ino
sha/: README.md  experiment_time.h  main.c  sha.ino  sha256.c
(+68 files in other folders)
